--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Playio</string>
+    <string name="app_name">Play IO</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome">Welcome</string>
@@ -10,4 +10,8 @@
     <string name="top_genre">Top Genre</string>
     <string name="profile_picture">profile picture</string>
     <string name="top_albums">Top Albums</string>
+    <string name="no_internet_message">Your device is not connected to the internet, turn on your data or connect to a secure wifi network to continue streaming more indie music.</string>
+    <string name="error_image">Error Image</string>
+    <string name="track_art">Track Art</string>
+    <string name="play_button">Play Button</string>
 </resources>
