--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="play_pause">Play/Pause</string>
     <string name="next">Next</string>
     <string name="repeat">Repeat</string>
+    <string name="dark_mode">Dark Mode</string>
 </resources>
